--- a/lista1/package.json
+++ b/lista1/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.1.1",
     "react-native": "0.79.5",
     "react-native-web": "^0.20.0",
-    "expo-constants": "~17.1.7"
+    "expo-constants": "~17.1.7",
+    "expo-image": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
