--- a/lista1/package.json
+++ b/lista1/package.json
@@ -11,14 +11,14 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "expo": "~53.0.20",
-    "expo-status-bar": "~2.2.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-native": "0.79.5",
-    "react-native-web": "^0.20.0",
+    "expo": "^53.0.22",
     "expo-constants": "~17.1.7",
-    "expo-image": "~2.4.0"
+    "expo-image": "~2.4.0",
+    "expo-status-bar": "~2.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": "0.79.5",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
