--- a/lista1/package.json
+++ b/lista1/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-picker/picker": "^2.11.1",
     "expo": "^53.0.22",
     "expo-constants": "~17.1.7",
     "expo-image": "~2.4.0",
